--- a/styles/style.css
+++ b/styles/style.css
@@ -7,31 +7,54 @@
 body {
   min-height: 100vh;
   font-family: sans-serif;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 main {
+  margin: auto;
   display: flex;
   flex-direction: row;
+
   height: 100%;
+  max-height: 100vh;
   max-width: 1600px;
-  margin: auto;
+}
+
+h1 {
+  font-size: 64px;
 }
 
 figure {
-  min-height: 30vh;
-  width: 45%;
-  border-radius: 10px;
-  background-color: white;
-  margin: 1rem;
+  min-height: 100px;
+  height: 10vw;
+  min-width: 100px;
+  width: 10vw;
+  object-fit: cover;
+}
+
+img {
+  min-height: 100px;
+  height: 10vw;
+  min-width: 100px;
+  width: 10vw;
+  max-width: 100%;
+  border-radius: 20px;
+  object-fit: cover;
 }
 
 .left, .middle, .right {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 100vh;
+  flex-flow: row wrap;
+  align-items: center;
+  align-content: flex-start;
+  justify-content: center;
+  gap: 4px;
+
+  min-height: 100vh;
   width: 33%;
-  overflow: scroll;
+  overflow-y: scroll;
+  max-width: 25vw;
 }
 
 .left {
@@ -40,8 +63,16 @@ figure {
 
 .middle {
   background-color: #b2d3f6;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
 }
 
 .right {
   background-color: #ffcfe0;
+}
+
+section::-webkit-scrollbar {
+  display: none;
 }
