--- a/iris/styles/style.css
+++ b/iris/styles/style.css
@@ -1,78 +1,144 @@
+/* COMMON ELEMENTS */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+body > header {
+  display: block;
+
+  @media screen and (min-width: 480px) {
+    display: none;
+  }
+}
+
 body {
   min-height: 100vh;
+  width: 100vw;
   font-family: sans-serif;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+
+  /* hide scrollbar */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 main {
-  margin: auto;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
+  margin: auto;
   height: 100%;
   max-height: 100vh;
-  max-width: 1600px;
+  width: 100vw;
+  max-width: 1200px;
+}
+
+h1, h2 {
+  font-family: "Dosis", sans-serif;
+  text-align: center;
 }
 
 h1 {
   font-size: 64px;
 }
 
-figure {
-  min-height: 100px;
-  height: 10vw;
-  min-width: 100px;
-  width: 10vw;
-  object-fit: cover;
-}
-
 img {
-  min-height: 100px;
-  height: 10vw;
-  min-width: 100px;
-  width: 10vw;
+  min-height: 120px;
+  height: 12vw;
+  min-width: 120px;
+  width: 12vw;
   max-width: 100%;
   border-radius: 20px;
   object-fit: cover;
 }
 
+/* MAIN THREE SECTIONS */
 .left, .middle, .right {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  align-content: flex-start;
-  justify-content: center;
-  gap: 4px;
-
   min-height: 100vh;
-  width: 33%;
   overflow-y: scroll;
-  max-width: 25vw;
+}
+
+.left, .right {
+  width: 45%;
+
+  @media screen and (min-width: 480px) {
+    max-width: 35%;
+  }
 }
 
 .left {
-  background-color: #c7a4d3;
+  background-color:rgb(27, 27, 27);
+}
+
+.left.grid-container.filler { /*why is this changing something but will not appear in dev tools ???? */
+  grid-column: 1 / 2;
+  grid-row: 1 / 1;
 }
 
 .middle {
-  background-color: #b2d3f6;
+  position: relative;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: center;
+  flex-shrink: 2;
+  max-width: 30%;
+
+  header {
+    padding: 2rem;
+  }
+
+  @media screen and (min-width: 480px) {
+    display: block;
+    /*min-width: 20em;*/
+
+    +header {
+      display: none;
+    }
+  }
 }
 
 .right {
-  background-color: #ffcfe0;
+  background-color:rgb(27, 27, 27);
+
+  .grid-container .filler {
+    grid-column: 2 / 3;
+    grid-row: 1 / 1;
+  }
 }
 
+figure {
+  grid-row: span 2;
+}
+
+/* IMAGE TRACK */
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: .5em;
+  padding: .5em;
+  justify-items: center;
+
+  @media screen and (min-width: 480px) {
+    grid-template-columns: repeat(2, fit-content(1fr));
+  }
+}
+
+.filler {
+  display: none;
+  border-radius: 20px;
+
+  @media screen and (min-width: 480px) {
+    display: block;
+  }
+}
+
+
+
+/* HIDE SCROLLBAR */
 section::-webkit-scrollbar {
   display: none;
 }
