--- a/nadia/amstelcampus.css
+++ b/nadia/amstelcampus.css
@@ -1,8 +1,4 @@
 
-* {
-    margin: 0;
-    padding: 0;
-}
 
 header{
     width: 100vw;
@@ -23,6 +19,11 @@ main{
     background-color: #d0dee3;
 }
 
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .middle{   
     display: flex;
@@ -39,30 +40,40 @@ h1{
 
 h2{
 font-family:'Times New Roman', Times, serif ;
-font-size: 15px ;
+font-size: 24px ;
 }
 
 
 h3{
     font-family: didot;
-    font-size: 24px;
+    font-size: 18px;
 }
 
-
-b{
-font-family: Georgia, 'Times New Roman', Times, serif;
-font-size: 15px;
-
+h4{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15,5px;
 }
+
 
 
 p{
 font-family: Georgia, 'Times New Roman', Times, serif;
 font-size: 15px;
+max-width: 40em;
 
 }
 
 
 img{
     width: 200px;
+    margin-bottom: 25px;
+}
+
+
+th{
+background-color: rgb(193, 193, 193);
+}
+
+td{
+    background-color: rgb(208, 206, 206); 
 }
