--- a/nadia/style.css
+++ b/nadia/style.css
@@ -7,7 +7,6 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 header{
@@ -35,11 +34,10 @@ img{
     width: 150px;
     height: 150px;
     object-fit: cover;
-
 }
 
 img:hover{
-filter:brightness(50%)
+filter:brightness(60%)
 }
 
 main{
@@ -47,7 +45,7 @@ main{
     flex-direction: column;
     width: 100vw;
     margin: auto;
-    align-items: center;
+    align-items:center;
     max-width: 800px;
     background-color: #d0dee3;
 }
@@ -59,4 +57,6 @@ main{
   grid-template-columns: max-content max-content;
 }
 
-
+a{
+    text-decoration: none;
+}
