--- a/gezamenlijk/styles/style.css
+++ b/gezamenlijk/styles/style.css
@@ -3,14 +3,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  /* VARIABLES */
+  --primary-color: rgba(5, 5, 66, 1);
+  --secondary-color: rgba(166, 117, 245, 1);
+}
+
+html {
+  height: 100%;
 }
 
 body {
-  min-height: 100vh;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
   font-family: sans-serif;
-  background: rgb(5, 5, 66);
-  background: linear-gradient(90deg, rgba(5, 5, 66, 1) 0%, rgba(166, 117, 245, 1) 100%);
+  background: var(--primary-color);
+  background: linear-gradient(90deg, var(--primary-color) 0%, var(--secondary-color) 100%);
 
   /* hide scrollbar */
   -ms-overflow-style: none;
@@ -22,8 +31,8 @@ main {
   flex-direction: column;
 
   height: 100%;
-  max-height: 100vh;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
 }
 
 h1,
@@ -38,6 +47,14 @@ h1 {
 
 h2 {
   font-size: 8vw;
+}
+
+.subheader {
+  display: block;
+}
+
+.alt-subheader {
+  display: none;
 }
 
 p {
@@ -77,21 +94,24 @@ img {
   }
 }
 
-.image-container {
-  img {
-    border: 2px solid white;
-    box-shadow: 0px 2px 2px black;
-  }
+img {
+  border: 2px solid white;
+  box-shadow: 0px 2px 2px black;
+  height: 20vh;
+  width: 20vh;
+  object-fit: cover;
+}
 
-  .grid-container {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 20vh 20vh;
-    grid-auto-flow: column;
-    gap: .5em;
-    padding: .5em;
-    justify-items: center;
-  }
+.grid-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 20vh 20vh;
+  grid-auto-flow: column;
+  gap: .5em;
+  padding: .5em;
+  justify-items: center;
+  overflow-x: scroll;
+
 }
 
 
@@ -121,7 +141,14 @@ section::-webkit-scrollbar {
   }
 
   .grid-container {
-    /* grid-template-columns: repeat(2, fit-content(1fr)); */
+    display: grid;
+    grid-template-columns: repeat(9, 75px);
+    grid-template-rows: 20vh 20vh;
+    grid-auto-flow: column;
+    gap: .5em;
+    padding: .5em;
+    justify-items: center;
+    width: auto;
   }
 
   main {
@@ -129,8 +156,8 @@ section::-webkit-scrollbar {
   }
 
   .text-container {
-    padding-left: 1rem;
-    max-width: 30%;
+    padding-left: 8vw;
+    max-width: 40%;
     align-items: start;
 
     header {
@@ -139,10 +166,34 @@ section::-webkit-scrollbar {
   }
 
   .image-container {
-    max-width: 70%;
+    max-width: 60vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  figure {
+    grid-column: span 2;
   }
 
   .ampersand {
     display: none;
+  }
+
+  /* .campus {
+    width: calc(8*75px);
+  }
+
+  .cards {
+    width: calc(30*75px);
+  } */
+
+  .subheader {
+    display: none;
+  }
+
+  .alt-subheader {
+    display: block;
   }
 }
