--- a/gezamenlijk/styles/style.css
+++ b/gezamenlijk/styles/style.css
@@ -63,15 +63,16 @@ p {
   max-width: 80vw;
 }
 
+/* 
 img {
-  min-height: 120px;
+  min-height: 10vw;
   height: 12vw;
   min-width: 120px;
   width: 12vw;
   max-width: 100%;
   border-radius: 20px;
   object-fit: cover;
-}
+} */
 
 /* MAIN CONTAINERS */
 .text-container {
@@ -99,6 +100,7 @@ img {
   box-shadow: 0px 2px 2px black;
   height: 20vh;
   width: 20vh;
+  border-radius: 20px;
   object-fit: cover;
 }
 
@@ -121,14 +123,17 @@ section::-webkit-scrollbar {
   display: none;
 }
 
+.filler1, .filler2, .filler3 {
+  display: none;
+}
+
 @media screen and (min-width: 480px) {
   h1 {
-    /* font-size: 64px; */
     font-size: max(64px, 7vw);
   }
 
   h2 {
-    font-size: 2vw;
+    font-size: max(36px, 3vw);;
     max-width: 100%;
   }
 
@@ -142,13 +147,21 @@ section::-webkit-scrollbar {
 
   .grid-container {
     display: grid;
-    grid-template-columns: repeat(9, 75px);
+    grid-template-columns: repeat(9, 10vh);
     grid-template-rows: 20vh 20vh;
     grid-auto-flow: column;
     gap: .5em;
     padding: .5em;
     justify-items: center;
-    width: auto;
+    width: 100%;
+    overflow: scroll;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .grid-container::-webkit-scrollbar {
+    display: none;
   }
 
   main {
@@ -159,6 +172,7 @@ section::-webkit-scrollbar {
     padding-left: 8vw;
     max-width: 40%;
     align-items: start;
+    padding-bottom: 10vh;
 
     header {
       display: block;
@@ -171,6 +185,7 @@ section::-webkit-scrollbar {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-end;
   }
 
   figure {
@@ -181,19 +196,35 @@ section::-webkit-scrollbar {
     display: none;
   }
 
-  /* .campus {
-    width: calc(8*75px);
-  }
-
-  .cards {
-    width: calc(30*75px);
-  } */
-
   .subheader {
     display: none;
   }
 
   .alt-subheader {
     display: block;
+  }
+
+  .filler1, .filler2, .filler3 {
+    display: block;
+  }
+
+  .filler1 {
+    grid-column: span 1;
+  }
+
+  .filler2 {
+    grid-column: span 2;
+  }
+
+  .filler3 {
+    grid-column: span 3;
+  }
+
+  .top {
+    grid-row: 1;
+  }
+
+  .bottom {
+    grid-row: 2;
   }
 }
