--- a/gezamenlijk/styles/amstel.css
+++ b/gezamenlijk/styles/amstel.css
@@ -1,8 +1,8 @@
-body{
-    background:linear-gradient(90deg, rgba(5, 5, 66, 1) 0%, rgba(166, 117, 245, 1) 100%);
+body {
+    background: linear-gradient(90deg, rgba(5, 5, 66, 1) 0%, rgba(166, 117, 245, 1) 100%);
 }
 
-main{
+main {
     width: 100vw;
     margin: auto;
     align-items: center;
@@ -10,7 +10,7 @@ main{
 }
 
 /*midden van pagina */
-header{
+header {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -24,106 +24,123 @@ header{
 }
 
 /*pijl terug naar homepagina*/
-svg{
+svg {
     width: 50px;
     vertical-align: bottom;
-    fill:#ffffff;
+    fill: #ffffff;
 }
 
 /*als cursor overheen gaat andere kleur pijl*/
-svg:hover{
-fill:rgba(166, 117, 245, 1);
+svg:hover {
+    fill: rgba(166, 117, 245, 1);
 }
 
 /*midden van pagina, tekst en witte vlak*/
-.middle{   
+.middle {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 /*midden van pagina h3 en plaatjes*/
-section{
+section {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-img{
+img {
     width: 300px;
     margin-bottom: 25px;
 }
 
 
-h1{
+h1 {
     font-family: "Madimi One", sans-serif;
     font-size: 32px;
     color: rgb(255, 255, 255);
 }
 
 
-h2{
-font-family:"Madimi One", sans-serif;
-font-size: 24px ;
-color: rgb(254, 254, 254);
+h2 {
+    font-family: "Madimi One", sans-serif;
+    font-size: 24px;
+    color: rgb(254, 254, 254);
 }
 
 
-h3{
+h3 {
     font-family: "Madimi One", sans-serif;
     font-size: 18px;
 
 }
 
 
-h4{
+h4 {
     font-family: "Madimi One", sans-serif;
-    font-size: 15,5px;
+    font-size: 15, 5px;
 }
 
 
-p{
-font-family: Georgia, 'Times New Roman', Times, serif;
-font-size: 15px;
-max-width: 40em;
+p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 15px;
+    max-width: 40em;
 }
 
 /*tekst van alle inleidingen van de onderwerpen*/
-.inleiding{
+.inleiding {
     color: rgb(211, 211, 211);
-margin-bottom: 2em;
-padding: 1em;
+    margin-bottom: 2em;
+    padding: 1em;
+}
+
+
+th,td {
+    text-align: center;
+    padding-left: .5em;
+    padding-right: .5em;
+}
+
+
+/*kleur van tabel th -> dagen en td -> tijden*/
+th {
+    background-color: rgb(193, 193, 193);
+
+}
+
+td {
+    background-color: rgb(208, 206, 206);
+}
+
+table:hover {background-color:rgba(166, 117, 245, 1);}
+
+/*tabel th en td samenvoegen*/
+/* tr:has(:hover) th,
+tr:has(:hover) td {
+    background-color:rgba(166, 117, 245, 1);
+} */
+
+tr:has(:hover) :is(th, td) {
+    background-color:rgba(166, 117, 245, 1);
 }
 
 
 
-/*kleur van tabel th -> dagen en td -> tijden*/
-th{
-    background-color: rgb(193, 193, 193); 
-    
-    }
-    
-    td{
-        background-color: rgb(208, 206, 206); 
-    }
-
-
-    /*plaatje en tabel naast elkaar*/
-.info{
+/*plaatje en tabel naast elkaar*/
+.info {
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     gap: 1em;
-    
-
 }
+
+
 /*het witte vlak waar de tekst, plaatje en tabel in staan*/
-section{
+section {
     background-color: rgb(251, 251, 251);
     border-radius: 20px;
     margin-bottom: 2em;
     padding: 1em;
-    
 }
-
