--- a/gezamenlijk/styles/amstel.css
+++ b/gezamenlijk/styles/amstel.css
@@ -1,5 +1,6 @@
 body {
     background: linear-gradient(90deg, rgba(5, 5, 66, 1) 0%, rgba(166, 117, 245, 1) 100%);
+    margin: 0px;
 }
 
 main {
@@ -20,8 +21,8 @@ header {
     font-family: "Madimi One", sans-serif;
     font-size: 32px;
     gap: .5em;
-
 }
+
 
 /*pijl terug naar homepagina*/
 svg {
@@ -47,12 +48,17 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 img {
     width: 300px;
     margin-bottom: 25px;
     border-radius: 20px;
+}
+
+.plaatje{
+    width: 250px;
 }
 
 
@@ -73,7 +79,6 @@ h2 {
 h3 {
     font-family: "Madimi One", sans-serif;
     font-size: 18px;
-
 }
 
 
@@ -84,20 +89,22 @@ h4 {
 
 
 p {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Gill Sans, sans-serif; 
     font-size: 15px;
     max-width: 40em;
+
 }
 
 /*tekst van alle inleidingen van de onderwerpen*/
 .inleiding {
-    color: rgb(211, 211, 211);
+    color: rgb(255, 255, 255);
     margin-bottom: 2em;
     padding: 1em;
 }
 
 
-th,td {
+th,
+td {
     text-align: center;
     padding-left: .5em;
     padding-right: .5em;
@@ -107,16 +114,22 @@ th,td {
 /*kleur van tabel th -> dagen en td -> tijden*/
 th {
     background-color: rgb(193, 193, 193);
-
+/* font-family: "Gowun Batang", serif;
+font-size: 15px; */
+font-family: Gill Sans, sans-serif; 
+font-weight: normal;
 }
 
 td {
     background-color: rgb(208, 206, 206);
+    /* font-family: "Gowun Batang", serif;
+font-size: 15px; */
+font-family: Gill Sans, sans-serif; 
 }
 
 
 table:hover {
-background-color:rgba(166, 117, 245, 1);
+    background-color: rgba(166, 117, 245, 1);
 }
 
 /*tabel th en td samenvoegen*/
@@ -126,26 +139,34 @@ tr:has(:hover) td {
 } */
 
 tr:has(:hover) :is(th, td) {
-    background-color:rgba(166, 117, 245, 1);
+    background-color: rgba(166, 117, 245, 1);
 }
 
-/*Rondingen toevoegen*/
-table tr:first-child th:first-child{
+
+/*Rondingen toevoegen tabel*/
+table tr:first-child th:first-child {
     border-top-left-radius: 20px;
-  }
-  table tr:first-child th:last-child{
+}
+
+table tr:first-child th:last-child {
     border-top-right-radius: 20px;
-  }
-  table tr:last-child th:first-child{
+}
+
+table tr:last-child th:first-child {
+    border-bottom-left-radius: 20px;
+}
+
+table tr:last-child td:last-child {
+    border-bottom-right-radius: 20px;
+}
+
+table tr:last-child td:first-child{
     border-bottom-left-radius: 20px;
   }
-  table tr:last-child td:last-child{
-    border-bottom-right-radius: 20px;
-  }
-  table{
-    border-radius: 20px;
-  }
 
+table {
+    border-radius: 20px;
+}
 
 
 /*plaatje en tabel naast elkaar*/
@@ -155,10 +176,22 @@ table tr:first-child th:first-child{
     justify-content: center;
     flex-wrap: wrap;
     gap: 1em;
-
-
+    align-items: center;
 }
 
+/*plaatje en tekst naast elkaar*/
+.koffie{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.5em;
+    align-items: center;
+}
+
+.descripton{
+    max-width: 22em;
+}
 
 /*het witte vlak waar de tekst, plaatje en tabel in staan*/
 section {
@@ -166,4 +199,19 @@ section {
     border-radius: 20px;
     margin-bottom: 2em;
     padding: 1em;
+}
+
+footer{
+    background-color: blueviolet;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 6em;
+    align-items: center;
+
+}
+
+.onder{
+    color:rgb(255, 255, 255);
 }
