--- a/styles/amstel.css
+++ b/styles/amstel.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Gill Sans";
-    src: url("../../assets/GillSans/Gill\ Sans.otf") format("opentype")
+    src: url("../assets/GillSans/Gill\ Sans.otf") format("opentype")
 }
 
 body {
