--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Gill Sans";
+  src: url("../assets/GillSans/Gill\ Sans.otf") format("opentype")
+}
+
 /* COMMON ELEMENTS */
 * {
   margin: 0;
@@ -18,12 +23,10 @@ body {
   max-width: 100%;
   height: 100%;
   font-family: sans-serif;
-  background: var(--primary-color);
+  background: var(--primary-color); /* fallback */
   background: linear-gradient(90deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-
-  /* hide scrollbar */
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  -ms-overflow-style: none; /* hide scrollbar */
+  scrollbar-width: none; /* hide scrollbar */
 }
 
 svg {
@@ -65,6 +68,14 @@ a {
   color: white;
 }
 
+p {
+  font-family: "Gill Sans", sans-serif;
+  color: white;
+  font-size: 14px;
+  max-width: 80vw;
+}
+
+/* Alternative header elements for mobile and desktop */
 .small-subheader {
   display: inline-block;
 }
@@ -73,12 +84,7 @@ a {
   display: none;
 }
 
-p {
-  font-family: Gill Sans, sans-serif;
-  color: white;
-  font-size: 14px;
-  max-width: 80vw;
-}
+
 
 /* MAIN CONTAINERS */
 .text-container {
@@ -119,13 +125,14 @@ img {
   padding: .5em;
   justify-items: center;
   overflow-x: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  }
+  -ms-overflow-style: none; /* hide scrollbar */
+  scrollbar-width: none; /* hide scrollbar */
+}
 
 .grid-container::-webkit-scrollbar {
-display: none;
+  display: none;  /* hide scrollbar */
 }
+
 .header-flex {
   display: flex;
   align-items: center;
@@ -135,17 +142,14 @@ display: none;
   align-self: flex-end;
 }
 
-
-
-/* HIDE SCROLLBAR */
 section::-webkit-scrollbar {
-  display: none;
+  display: none;  /* hide scrollbar */
 }
 
 .filler1,
 .filler2,
 .filler3 {
-  display: none;
+  display: none; /* hide filler divs */
 }
 
 @media screen and (min-width: 480px) {
@@ -155,7 +159,6 @@ section::-webkit-scrollbar {
 
   h2 {
     font-size: max(36px, 3vw);
-    ;
     max-width: 100%;
   }
 
@@ -163,10 +166,6 @@ section::-webkit-scrollbar {
     font-size: 16px;
     color: var(--secondary-color);
     max-width: 24em;
-  }
-
-  header {
-    margin-bottom: 2rem;
   }
 
   .grid-container {
@@ -192,6 +191,12 @@ section::-webkit-scrollbar {
     flex-direction: row;
   }
 
+  /* HEADER */
+
+  header {
+    margin-bottom: 2rem;
+  }
+
   .text-container {
     padding-left: 8vw;
     max-width: 40%;
@@ -201,6 +206,18 @@ section::-webkit-scrollbar {
     header {
       display: block;
     }
+  }
+
+  .ampersand {
+    display: none;
+  }
+
+  .small-subheader {
+    display: none;
+  }
+
+  .large-subheader {
+    display: flex;
   }
 
   .image-container {
@@ -217,18 +234,7 @@ section::-webkit-scrollbar {
     grid-column: span 2;
   }
 
-  .ampersand {
-    display: none;
-  }
-
-  .small-subheader {
-    display: none;
-  }
-
-  .large-subheader {
-    display: flex;
-  }
-
+  /* GRID POSITIONING */
   .filler1,
   .filler2,
   .filler3 {
