--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,7 @@ p {
   color: white;
   font-size: 14px;
   max-width: 80vw;
+  margin: 1.5rem 0;
 }
 
 /* Alternative header elements for mobile and desktop */
@@ -178,6 +179,7 @@ section::-webkit-scrollbar {
     font-size: 16px;
     color: var(--secondary-color);
     max-width: 24em;
+    margin: 0;
   }
 
   .grid-container {
