--- a/styles/style.css
+++ b/styles/style.css
@@ -122,11 +122,25 @@ img {
 		translateZ(0em);
 }
 
+
 img:hover {
   filter: brightness(120%);
   transform:
     perspective(15em)
     translateZ(1em);
+}
+
+figure {
+  position: relative;
+}
+
+figcaption {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: white;
+  text-shadow: 0px 2px 2px black;
 }
 
 .grid-container {
